syntax = "proto3";
option java_package = "no.nordicsemi.android.nrfmesh.core.data";
option java_multiple_files = true;

message ProtoSecurePropertiesMap {
  map<string, ProtoSecureProperties> properties = 1;
  string localProvisionerUuid = 2;
}

message ProtoSecureProperties {
  string localProvisionerUuid = 1;
  ProtoIvIndex ivIndex = 2;
  map<uint32, uint32> sequenceNumbers = 3;
  map<uint32, ProtoSeqAuth> seqAuths = 4;
}

message ProtoIvIndex {
  uint32 index = 1;
  bool updateActive = 2;
  uint64 transitionDate = 3;
}

message ProtoSeqAuth {
  uint64 last = 1;
  uint64 previous = 2;
}
